# loki-update

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
loki-update-ui/: package-lock.json  package.json
loki-update-ui/app/: README.md  index.html  package-lock.json  package.json
loki-update-ui/app/src/: App.css  App.jsx  BackUpImageModal.jsx  FileUploadModal.jsx  ImageInfo.jsx  ImageInfoCard.jsx  RebootBoardModal.jsx  RestoreImageModal.jsx  main.jsx
loki-update-ui/public/: index.html
loki-update-ui/src/: App.css  App.js  BackUpImageModal.jsx  FileSyncWarning.jsx  FileUploadModal.jsx  ImageInfo.jsx  ImageInfoCard.jsx  RebootBoardModal.jsx  RestoreImageModal.jsx
src/loki_update/: adapter.py  controller.py
test/config/: loki-update.cfg
