[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "loki-update"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "An adapter to manage image versions and updates on LOKI systems."
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Callum Lee", email = "callum.lee@stfc.ac.uk"},
]
dependencies = [
    "odin_control @ git+https://git@github.com/odin-detector/odin-control.git@1.6.0",
    "tornado>=4.3",
    "future",
    "pyfdt"
]
requires-python = ">=3.7"